fixing dropdown z-index

--- a/website-guts/assets/css/helper-classes.scss
+++ b/website-guts/assets/css/helper-classes.scss
@@ -95,7 +95,7 @@
 .subheading {
 	color: #242424;
 	font-size: 1.9em;
-	margin-bottom: 30px;
+	margin: 0 0 38px;
 	text-align: center;
 	font-weight: 300;
 }
