--- a/website-guts/assets/css/modules/header.scss
+++ b/website-guts/assets/css/modules/header.scss
@@ -254,6 +254,7 @@ header {
               min-width: 210px;
               text-align: left;
               padding: 10px 0;
+              z-index: 20;
               li {
                   width: 100%;
               }
